--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecommerce",
+  "homepage": "http://doduyhung1292.github.io/ecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,12 @@
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
